Changed build root to launch off /var/tmp instead of /tmp. (This used to be commit c16f051a40ff9d2ce15539ff7d4d177e0cb6de97)

--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -10,7 +10,7 @@ Patch1: smbw.patch
 Packager: John H Terpstra [Samba-Team] <jht@samba.anu.edu.au>
 Requires: pam >= 0.64
 Prereq: chkconfig fileutils
-BuildRoot: /tmp/samba
+BuildRoot: /var/tmp/samba
 
 %description
 Samba provides an SMB server which can be used to provide
