--- a/packaging/RedHat/samba2.spec.tmpl
+++ b/packaging/RedHat/samba2.spec.tmpl
@@ -10,7 +10,7 @@ Patch1: smbw.patch
 Packager: John H Terpstra [Samba-Team] <jht@samba.anu.edu.au>
 Requires: pam >= 0.64
 Prereq: chkconfig fileutils
-BuildRoot: /tmp/samba
+BuildRoot: /var/tmp/samba
 
 %description
 Samba provides an SMB server which can be used to provide
