Added --with-smbwrapper to configure lines in spec files so JohnT's scripts work ok. Jeremy.

--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -97,7 +97,7 @@ enabled. Red Hat Linux has built in support for quotas in PAM.
 
 %build
 cd source
-./configure
+./configure --with-smbwrapper
 make all smbwrapper
 
 %install
