--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -132,9 +132,9 @@ install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/sbin
 done
 
 # Install level 1 man pages
-for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1
+for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1
 do
-install -m644 docs/$i $RPM_BUILD_ROOT/usr/man/man1
+install -m644 docs/manpages/$i $RPM_BUILD_ROOT/usr/man/man1
 done
 
 # Install codepage source files
@@ -159,11 +159,14 @@ done
 
 # Install the miscellany
 install -m644 swat/README $RPM_BUILD_ROOT/usr/share/swat
-install -m644 docs/smb.conf.5 $RPM_BUILD_ROOT/usr/man/man5
-install -m644 docs/samba.7 $RPM_BUILD_ROOT/usr/man/man7
-install -m644 docs/smbd.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/nmbd.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 docs/smbpasswd.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/smb.conf.5 $RPM_BUILD_ROOT/usr/man/man5
+install -m644 docs/manpages/lmhosts.5 $RPM_BUILD_ROOT/usr/man/man5
+install -m644 docs/manpages/smbpasswd.5 $RPM_BUILD_ROOT/usr/man/man5
+install -m644 docs/manpages/samba.7 $RPM_BUILD_ROOT/usr/man/man7
+install -m644 docs/manpages/smbd.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/nmbd.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/smbpasswd.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/swat.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 packaging/RedHat/smb.conf $RPM_BUILD_ROOT/etc/smb.conf
 install -m644 packaging/RedHat/smbusers $RPM_BUILD_ROOT/etc/smbusers
 install -m755 packaging/RedHat/smbprint $RPM_BUILD_ROOT/usr/bin
