--- a/packaging/Caldera/samba2.spec.tmpl
+++ b/packaging/Caldera/samba2.spec.tmpl
@@ -35,58 +35,6 @@ docs directory for implementation details.
 * Mon Nov 16 1998 John H Terpstra <jht@samba.anu.edu.au>
  - Ported to Cadera OpenLinux
 
-* Sun Oct 25 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Added parameters to /config to ensure smb.conf, lmhosts, 
-	and smbusers never gets over-written.
-
-* Sat Oct 24 1998 John H Terpstra <jht@samba.anu.edu.au>
- - removed README.smbsh file from docs area
-
-* Mon Oct 05 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Added rpcclient to binaries list
- - Added smbwrapper stuff
-
-* Fri Aug 21 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Updated for Samba version 2.0 building
-
-* Tue Jul 07 1998 Erik Troan <ewt@redhat.com>
-  - updated postun triggerscript to check $0
-  - clear /etc/codepages from %preun instead of %postun
-
-* Sat Jul 04 1998 John H Terpstra <jht@samba.anu.edu.au>
- - fixed codepage preservation during update via -Uvh
-
-* Mon Jun 08 1998 Erik Troan <ewt@redhat.com>
-  - made the %postun script a tad less agressive; no reason to remove
-    the logs or lock file 
-  - the %postun and %preun should only exectute if this is the final
-    removal
-  - migrated %triggerpostun from Red Hat's samba package to work around
-    packaging problems in some Red Hat samba releases
-
-* Sun Apr 26 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Tidy up for early alpha releases
- - added findsmb from SGI packaging
-
-* Thu Apr 09 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Updated spec file
- - Included new codepage.936
-
-* Sat Mar 20 1998 John H Terpstra <jht@samba.anu.edu/au>
- - Added swat facility
-
-* Sat Jan 24 1998 John H Terpstra <jht@samba.anu.edu.au>
- - Many optimisations (some suggested by Manoj Kasichainula <manojk@io.com>
-  - Use of chkconfig in place of individual symlinks to /etc/rc.d/init/smb
-  - Compounded make line
-  - Updated smb.init restart mechanism
-  - Use compound mkdir -p line instead of individual calls to mkdir
-  - Fixed smb.conf file path for log files
-  - Fixed smb.conf file path for incoming smb print spool directory
-  - Added a number of options to smb.conf file
-  - Added smbadduser command (missed from all previous RPMs) - Doooh!
-  - Added smbuser file and smb.conf file updates for username map
-
 %prep
 %setup
 %patch -p1
@@ -94,8 +42,8 @@ docs directory for implementation details.
 
 %build
 cd source
-./configure --with-smbwrapper
-make all smbwrapper
+./configure
+make all
 
 %install
 rm -rf $RPM_BUILD_ROOT
@@ -113,7 +61,7 @@ mkdir -p $RPM_BUILD_ROOT/var/spool/samba
 
 # Install standard binary files
 for i in nmblookup smbclient smbpasswd smbrun smbstatus testparm testprns \
-      make_smbcodepage make_printerdef rpcclient smbsh smbwrapper.so
+      make_smbcodepage make_printerdef rpcclient
 do
 install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/bin
 done
@@ -240,12 +188,6 @@ if [ $1 != 0 ] ; then
     mv $tmpfile services
 fi
 
-%triggerpostun -- samba < samba-2.0.0
-if [ $0 != 0 ]; then
-    /sbin/chkconfig --add smb
-fi
-
-
 %files
 %doc README COPYING Manifest Read-Manifest-Now
 %doc WHATSNEW.txt Roadmap
@@ -255,7 +197,7 @@ fi
 %attr(-,root,root) /usr/sbin/smbd
 %attr(-,root,root) /usr/sbin/nmbd
 %attr(-,root,root) /usr/sbin/swat
-%attr(0755,root,root) /usr/sbin/samba
+%attr(0750,root,root) /usr/sbin/samba
 %attr(-,root,root) /usr/bin/addtosmbpass
 %attr(-,root,root) /usr/bin/mksmbpasswd.sh
 %attr(-,root,root) /usr/bin/smbclient
@@ -272,8 +214,6 @@ fi
 %attr(-,root,root) /usr/bin/smbtar
 %attr(-,root,root) /usr/bin/smbprint
 %attr(-,root,root) /usr/bin/smbadduser
-%attr(0755,root,root) /usr/bin/smbsh
-%attr(0755,root,root) /usr/bin/smbwrapper.so
 %attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
 %attr(-,root,root) /usr/share/swat/help/welcome.html
 %attr(-,root,root) /usr/share/swat/images/globals.gif
