Updated packaging files in line with restructuring of Makefile.in

--- a/packaging/Caldera/samba2.spec.tmpl
+++ b/packaging/Caldera/samba2.spec.tmpl
@@ -42,7 +42,7 @@ docs directory for implementation details.
 
 %build
 cd source
-./configure
+./configure --prefix=/usr --libdir=/etc
 make all
 
 %install
