global change from samba.anu.edu.au to samba.org

--- a/packaging/Caldera/samba2.spec.tmpl
+++ b/packaging/Caldera/samba2.spec.tmpl
@@ -4,10 +4,10 @@ Version: PVERSION
 Release: PRELEASE
 Copyright: GNU GPL version 2
 Group: Networking
-Source: ftp://samba.anu.edu.au/pub/samba/samba-PVERSION.tar.gz
+Source: ftp://samba.org/pub/samba/samba-PVERSION.tar.gz
 Patch: makefile-path.patch
 Patch1: smbw.patch
-Packager: John H Terpstra [Samba-Team] <jht@samba.anu.edu.au>
+Packager: John H Terpstra [Samba-Team] <jht@samba.org>
 BuildRoot: /var/tmp/samba
 
 %description
@@ -32,7 +32,7 @@ Please read the smb.conf file and ENCRYPTION.txt in the
 docs directory for implementation details.
 
 %changelog
-* Mon Nov 16 1998 John H Terpstra <jht@samba.anu.edu.au>
+* Mon Nov 16 1998 John H Terpstra <jht@samba.org>
  - Ported to Cadera OpenLinux
 
 %prep
