Added help files for SWAT. Oops type fixup.

--- a/packaging/Caldera/samba2.spec.tmpl
+++ b/packaging/Caldera/samba2.spec.tmpl
@@ -214,8 +214,25 @@ fi
 %attr(-,root,root) /usr/bin/smbtar
 %attr(-,root,root) /usr/bin/smbprint
 %attr(-,root,root) /usr/bin/smbadduser
-%attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
 %attr(-,root,root) /usr/share/swat/help/welcome.html
+%attr(-,root,root) /usr/share/swat/help/DOMAIN_MEMBER.html
+%attr(-,root,root) /usr/share/swat/help/lmhosts.5.html
+%attr(-,root,root) /usr/share/swat/help/make_smbcodepage.1.html
+%attr(-,root,root) /usr/share/swat/help/nmbd.8.html
+%attr(-,root,root) /usr/share/swat/help/nmblookup.1.html
+%attr(-,root,root) /usr/share/swat/help/samba.7.html
+%attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
+%attr(-,root,root) /usr/share/swat/help/smbclient.1.html
+%attr(-,root,root) /usr/share/swat/help/smbd.8.html
+%attr(-,root,root) /usr/share/swat/help/smbpasswd.5.html
+%attr(-,root,root) /usr/share/swat/help/smbpasswd.8.html
+%attr(-,root,root) /usr/share/swat/help/smbrun.1.html
+%attr(-,root,root) /usr/share/swat/help/smbstatus.1.html
+%attr(-,root,root) /usr/share/swat/help/smbtar.1.html
+%attr(-,root,root) /usr/share/swat/help/swat.8.html
+%attr(-,root,root) /usr/share/swat/help/testparm.1.html
+%attr(-,root,root) /usr/share/swat/help/testprns.1.html
+%attr(-,root,root) /usr/share/swat/help/wfw_slip.htm
 %attr(-,root,root) /usr/share/swat/images/globals.gif
 %attr(-,root,root) /usr/share/swat/images/home.gif
 %attr(-,root,root) /usr/share/swat/images/passwd.gif
