--- a/packaging/RedHat/samba2.spec.tmpl
+++ b/packaging/RedHat/samba2.spec.tmpl
@@ -75,7 +75,7 @@ enabled. Red Hat Linux has built in support for quotas in PAM.
  - Updated spec file
  - Included new codepage.936
 
-* Sat Mar 20 1998 John H Terpstra <jht@samba.org>
+* Sat Mar 20 1998 John H Terpstra <jht@samba.anu.edu/au>
  - Added swat facility
 
 * Sat Jan 24 1998 John H Terpstra <jht@samba.org>
@@ -144,7 +144,7 @@ install -m644 source/codepages/codepage_def.$i $RPM_BUILD_ROOT/etc/codepages/src
 done
 
 # Install SWAT helper files
-for i in swat/help/*.html
+for i in swat/help/*.html docs/htmldocs/*.html
 do
 install -m644 $i $RPM_BUILD_ROOT/usr/share/swat/help
 done
@@ -277,8 +277,24 @@ fi
 %attr(-,root,root) /usr/bin/smbadduser
 %attr(0755,root,root) /usr/bin/smbsh
 %attr(0755,root,root) /usr/bin/smbwrapper.so
-%attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
 %attr(-,root,root) /usr/share/swat/help/welcome.html
+%attr(-,root,root) /usr/share/swat/help/DOMAIN_MEMBER.html
+%attr(-,root,root) /usr/share/swat/help/lmhosts.5.html
+%attr(-,root,root) /usr/share/swat/help/make_smbcodepage.1.html
+%attr(-,root,root) /usr/share/swat/help/nmbd.8.html
+%attr(-,root,root) /usr/share/swat/help/nmblookup.1.html
+%attr(-,root,root) /usr/share/swat/help/samba.7.html
+%attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
+%attr(-,root,root) /usr/share/swat/help/smbclient.1.html
+%attr(-,root,root) /usr/share/swat/help/smbd.8.html
+%attr(-,root,root) /usr/share/swat/help/smbpasswd.5.html
+%attr(-,root,root) /usr/share/swat/help/smbpasswd.8.html
+%attr(-,root,root) /usr/share/swat/help/smbrun.1.html
+%attr(-,root,root) /usr/share/swat/help/smbstatus.1.html
+%attr(-,root,root) /usr/share/swat/help/smbtar.1.html
+%attr(-,root,root) /usr/share/swat/help/swat.8.html
+%attr(-,root,root) /usr/share/swat/help/testparm.1.html
+%attr(-,root,root) /usr/share/swat/help/testprns.1.html
 %attr(-,root,root) /usr/share/swat/images/globals.gif
 %attr(-,root,root) /usr/share/swat/images/home.gif
 %attr(-,root,root) /usr/share/swat/images/passwd.gif
