--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -7,7 +7,6 @@ Group: Networking
 Source: ftp://samba.org/pub/samba/samba-PVERSION.tar.gz
 Patch: makefile-path.patch
 Patch1: smbw.patch
-Packager: John H Terpstra [Samba-Team] <jht@samba.org>
 Requires: pam >= 0.64
 Prereq: chkconfig fileutils
 BuildRoot: /var/tmp/samba
@@ -97,7 +96,7 @@ enabled. Red Hat Linux has built in support for quotas in PAM.
 
 %build
 cd source
-./configure --prefix=/usr --libdir=/etc --with-smbwrapper
+CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=/usr --libdir=/etc --with-smbwrapper
 make all smbwrapper
 
 %install
