Removed one reference to Red Hat, changed to PHT TurboLinux.

--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -34,7 +34,7 @@ docs directory for implementation details.
 
 NOTE: TurboLinux uses PAM which has integrated support
 for Shadow passwords. Do NOT recompile with the SHADOW_PWD option
-enabled. Red Hat Linux has built in support for quotas in PAM.
+enabled. PHT TurboLinux has built in support for quotas in PAM.
 
 %changelog
 * Sun Oct 25 1998 John H Terpstra <jht@samba.org>
