--- a/packaging/Caldera/samba2.spec.tmpl
+++ b/packaging/Caldera/samba2.spec.tmpl
@@ -42,7 +42,7 @@ docs directory for implementation details.
 
 %build
 cd source
-./configure --prefix=/usr --libdir=/etc
+./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat
 make all
 
 %install
