Modified attribution info, checked contents.

--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -37,6 +37,9 @@ for Shadow passwords. Do NOT recompile with the SHADOW_PWD option
 enabled. PHT TurboLinux has built in support for quotas in PAM.
 
 %changelog
+* Sun Feb 28 1999 Jeremy Allison <jra@samba.org>
+ - Removed smbrun binary and tidied up some loose ends
+
 * Sun Oct 25 1998 John H Terpstra <jht@samba.org>
  - Added modifier to /config specifier so that smb.conf,
 	lmhosts and smbusers never get lost
@@ -74,7 +77,7 @@ enabled. PHT TurboLinux has built in support for quotas in PAM.
  - Updated spec file
  - Included new codepage.936
 
-* Sat Mar 20 1998 John H Terpstra <jht@samba.anu.edu/au>
+* Sat Mar 20 1998 John H Terpstra <jht@samba.org>
  - Added swat facility
 
 * Sat Jan 24 1998 John H Terpstra <jht@samba.org>
