--- a/packaging/RedHat/samba2.spec.tmpl
+++ b/packaging/RedHat/samba2.spec.tmpl
@@ -38,6 +38,9 @@ for Shadow passwords. Do NOT recompile with the SHADOW_PWD option
 enabled. Red Hat Linux has built in support for quotas in PAM.
 
 %changelog
+* Sat Jan 27 1999 Jeremy Allison <jra@samba.org>
+ - Removed smbrun binary and tidied up some loose ends
+
 * Sun Oct 25 1998 John H Terpstra <jht@samba.org>
  - Added parameters to /config to ensure smb.conf, lmhosts, 
 	and smbusers never gets over-written.
@@ -75,7 +78,7 @@ enabled. Red Hat Linux has built in support for quotas in PAM.
  - Updated spec file
  - Included new codepage.936
 
-* Sat Mar 20 1998 John H Terpstra <jht@samba.anu.edu/au>
+* Sat Mar 20 1998 John H Terpstra <jht@samba.org>
  - Added swat facility
 
 * Sat Jan 24 1998 John H Terpstra <jht@samba.org>
