--- a/packaging/PHT/TurboLinux/makerpms.sh.tmpl
+++ b/packaging/PHT/TurboLinux/makerpms.sh.tmpl
@@ -5,10 +5,9 @@ RPMDIR=`rpm --showrc | awk '/^rpmdir/ { print $3}'`
 SPECDIR=`rpm --showrc | awk '/^specdir/ { print $3}'`
 SRCDIR=`rpm --showrc | awk '/^sourcedir/ { print $3}'`
 
+( cd ../../../.. ; chown -R root.root ${SRCDIR}/samba-PVERSION )
 ( cd ../../../.. ; tar czvf ${SRCDIR}/samba-PVERSION.tar.gz samba-PVERSION )
 cp -a *.spec $SPECDIR
 cp -a *.patch smb.* samba.log $SRCDIR
-cd $SRCDIR
-chown -R root.root samba-PVERSION
 cd $SPECDIR
 rpm -ba -v samba2.spec
