Modified how we set uid/gid

--- a/packaging/PHT/TurboLinux/makerpms.sh.tmpl
+++ b/packaging/PHT/TurboLinux/makerpms.sh.tmpl
@@ -4,8 +4,10 @@
 RPMDIR=`rpm --showrc | awk '/^rpmdir/ { print $3}'`
 SPECDIR=`rpm --showrc | awk '/^specdir/ { print $3}'`
 SRCDIR=`rpm --showrc | awk '/^sourcedir/ { print $3}'`
+USERID=`id -u`
+GRPID=`id -g`
 
-( cd ../../../.. ; chown -R root.root ${SRCDIR}/samba-PVERSION )
+( cd ../../../.. ; chown -R ${USERID}.${GRPID} ${SRCDIR}/samba-PVERSION )
 ( cd ../../../.. ; tar czvf ${SRCDIR}/samba-PVERSION.tar.gz samba-PVERSION )
 cp -a *.spec $SPECDIR
 cp -a *.patch smb.* samba.log $SRCDIR
