Added the NT_Security file to the packaging for RedHat.

--- a/packaging/RedHat/samba2.spec.tmpl
+++ b/packaging/RedHat/samba2.spec.tmpl
@@ -285,6 +285,7 @@ fi
 %attr(0755,root,root) /usr/bin/smbwrapper.so
 %attr(-,root,root) /usr/share/swat/help/welcome.html
 %attr(-,root,root) /usr/share/swat/help/DOMAIN_MEMBER.html
+%attr(-,root,root) /usr/share/swat/help/NT_Security.html
 %attr(-,root,root) /usr/share/swat/help/lmhosts.5.html
 %attr(-,root,root) /usr/share/swat/help/make_smbcodepage.1.html
 %attr(-,root,root) /usr/share/swat/help/nmbd.8.html
