--- a/packaging/RedHat/samba2.spec.tmpl
+++ b/packaging/RedHat/samba2.spec.tmpl
@@ -38,6 +38,10 @@ for Shadow passwords. Do NOT recompile with the SHADOW_PWD option
 enabled. Red Hat Linux has built in support for quotas in PAM.
 
 %changelog
+* Sat Oct 9 1999 Tridge <tridge@linuxcare.com>
+ - removed smbwrapper
+ - added smbmnt and smbmount
+
 * Sun Apr 25 1999 John H Terpstra <jht@samba.org>
  - added smbsh.1 man page
 
@@ -106,8 +110,8 @@ enabled. Red Hat Linux has built in support for quotas in PAM.
 
 %build
 cd source
-./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat --with-smbwrapper --with-automount --with-quotas --with-pam
-make all smbwrapper
+./configure --prefix=/usr --libdir=/etc --with-lockdir=/var/lock/samba --with-privatedir=/etc --with-swatdir=/usr/share/swat --with-smbmount --with-automount --with-quotas --with-pam
+make all
 
 %install
 rm -rf $RPM_BUILD_ROOT
@@ -117,6 +121,7 @@ mkdir -p $RPM_BUILD_ROOT/etc/{logrotate.d,pam.d}
 mkdir -p $RPM_BUILD_ROOT/etc/rc.d/{init.d,rc0.d,rc1.d,rc2.d,rc3.d,rc5.d,rc6.d}
 mkdir -p $RPM_BUILD_ROOT/home/samba
 mkdir -p $RPM_BUILD_ROOT/usr/{bin,sbin}
+mkdir -p $RPM_BUILD_ROOT/sbin
 mkdir -p $RPM_BUILD_ROOT/usr/share/swat/{images,help,include}
 mkdir -p $RPM_BUILD_ROOT/usr/man/{man1,man5,man7,man8}
 mkdir -p $RPM_BUILD_ROOT/var/lock/samba
@@ -125,7 +130,7 @@ mkdir -p $RPM_BUILD_ROOT/var/spool/samba
 
 # Install standard binary files
 for i in nmblookup smbclient smbpasswd smbstatus testparm testprns \
-      make_smbcodepage make_printerdef rpcclient smbsh smbwrapper.so
+      make_smbcodepage make_printerdef rpcclient
 do
 install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/bin
 done
@@ -135,13 +140,16 @@ install -m755 source/script/$i $RPM_BUILD_ROOT/usr/bin
 done
 
 # Install secure binary files
-for i in smbd nmbd swat
+for i in smbd nmbd swat smbmount smbmnt
 do
 install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/sbin
 done
 
+# we need a symlink for mount to recognise the smb filesystem type
+ln -sf /usr/sbin/smbmount $RPM_BUILD_ROOT/sbin/mount.smb
+
 # Install level 1 man pages
-for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1 smbsh.1
+for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1
 do
 install -m644 docs/manpages/$i $RPM_BUILD_ROOT/usr/man/man1
 done
@@ -175,6 +183,8 @@ install -m644 docs/manpages/samba.7 $RPM_BUILD_ROOT/usr/man/man7
 install -m644 docs/manpages/smbd.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/nmbd.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/swat.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/smbmnt.8 $RPM_BUILD_ROOT/usr/man/man8
+install -m644 docs/manpages/smbmount.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/smbpasswd.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 packaging/RedHat/smb.conf $RPM_BUILD_ROOT/etc/smb.conf
 install -m644 packaging/RedHat/smbusers $RPM_BUILD_ROOT/etc/smbusers
@@ -265,6 +275,9 @@ fi
 %attr(-,root,root) /usr/sbin/smbd
 %attr(-,root,root) /usr/sbin/nmbd
 %attr(-,root,root) /usr/sbin/swat
+%attr(-,root,root) /usr/sbin/smbmnt
+%attr(-,root,root) /usr/sbin/smbmount
+%attr(-,root,root) /sbin/mount.smb
 %attr(0750,root,root) /usr/sbin/samba
 %attr(-,root,root) /usr/bin/addtosmbpass
 %attr(-,root,root) /usr/bin/mksmbpasswd.sh
@@ -281,8 +294,6 @@ fi
 %attr(-,root,root) /usr/bin/smbtar
 %attr(-,root,root) /usr/bin/smbprint
 %attr(-,root,root) /usr/bin/smbadduser
-%attr(0755,root,root) /usr/bin/smbsh
-%attr(0755,root,root) /usr/bin/smbwrapper.so
 %attr(-,root,root) /usr/share/swat/help/welcome.html
 %attr(-,root,root) /usr/share/swat/help/DOMAIN_MEMBER.html
 %attr(-,root,root) /usr/share/swat/help/NT_Security.html
@@ -293,7 +304,6 @@ fi
 %attr(-,root,root) /usr/share/swat/help/samba.7.html
 %attr(-,root,root) /usr/share/swat/help/smb.conf.5.html
 %attr(-,root,root) /usr/share/swat/help/smbclient.1.html
-%attr(-,root,root) /usr/share/swat/help/smbsh.1.html
 %attr(-,root,root) /usr/share/swat/help/smbd.8.html
 %attr(-,root,root) /usr/share/swat/help/smbpasswd.5.html
 %attr(-,root,root) /usr/share/swat/help/smbpasswd.8.html
@@ -334,7 +344,6 @@ fi
 %attr(-,root,root) /usr/man/man1/make_smbcodepage.1
 %attr(-,root,root) /usr/man/man1/smbrun.1
 %attr(-,root,root) /usr/man/man1/smbtar.1
-%attr(-,root,root) /usr/man/man1/smbsh.1
 %attr(-,root,root) /usr/man/man1/testparm.1
 %attr(-,root,root) /usr/man/man1/testprns.1
 %attr(-,root,root) /usr/man/man1/nmblookup.1
@@ -346,6 +355,8 @@ fi
 %attr(-,root,root) /usr/man/man8/nmbd.8
 %attr(-,root,root) /usr/man/man8/smbpasswd.8
 %attr(-,root,root) /usr/man/man8/swat.8
+%attr(-,root,root) /usr/man/man8/smbmnt.8
+%attr(-,root,root) /usr/man/man8/smbmount.8
 %attr(-,root,nobody) %dir /home/samba
 %attr(-,root,root) %dir /etc/codepages
 %attr(-,root,root) %dir /etc/codepages/src
