--- a/packaging/PHT/TurboLinux/samba2.spec.tmpl
+++ b/packaging/PHT/TurboLinux/samba2.spec.tmpl
@@ -59,6 +59,9 @@ server. Please use it with care. If you do not need it then do NOT
 install.
 
 %changelog
+* Sun Oct 16 1999 John H Terspstra <jht@turbolinux.com>
+- changed mount.smb to link to smbmount
+
 * Sun May 09 1999 John H Terpstra <jht@samba.org>
 - Added smbtorture et al.
 
@@ -163,6 +166,8 @@ for i in smbd nmbd swat smbmount smbumount smbmnt debug2html rpctorture smbtortu
 do
 install -m755 -s source/bin/$i $RPM_BUILD_ROOT/usr/sbin
 done
+# Now link smbmount to mount.smb 
+ln $RPM_BUILD_ROOT/usr/sbin/smbmount $RPM_BUILD_ROOT/sbin/mount.smb
 
 # Install level 1 man pages
 for i in smbclient.1 smbrun.1 smbstatus.1 smbtar.1 testparm.1 testprns.1 make_smbcodepage.1 nmblookup.1 smbsh.1
@@ -203,7 +208,8 @@ install -m644 docs/manpages/swat.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/smbmount.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/smbmnt.8 $RPM_BUILD_ROOT/usr/man/man8
 install -m644 docs/manpages/smbumount.8 $RPM_BUILD_ROOT/usr/man/man8
-install -m644 packaging/PHT/TurboLinux/mount.smb $RPM_BUILD_ROOT/sbin
+# The mount.smb script has been obsoleted.
+# install -m644 packaging/PHT/TurboLinux/mount.smb $RPM_BUILD_ROOT/sbin
 install -m644 packaging/PHT/TurboLinux/smb.conf $RPM_BUILD_ROOT/etc/smb.conf
 install -m644 packaging/PHT/TurboLinux/smbusers $RPM_BUILD_ROOT/etc/smbusers
 install -m755 packaging/PHT/TurboLinux/smbprint $RPM_BUILD_ROOT/usr/bin
